tests/errors/063-obsolete-part.e
part body
¬
{
    "message": "Missing operator before Symbol",
    "source_file": "tests/errors/063-obsolete-part.e",
    "primary_location": {
        "line": 1,
        "column": 6
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 6,
            "length": 4,
            "message": "Symbol starts a new expression here"
        }
    ],
    "notes": [],
    "help": [
        "Insert an operator such as +, -, *, /, or %% between values"
    ]
}
